--- a/Contents/Resources/index.html
+++ b/Contents/Resources/index.html
@@ -15,17 +15,11 @@
     <p>通过 TextGrid 快速重命名 sketch 图层名称</p>
 </div>
 <div class="login_button_container">
-    <div class="login_button">登录 TextGrid</div>
+    <div class="login_button" style="visibility: hidden">登录 TextGrid</div>
 </div>
-<div class="list_container">
-
-</div>
-<div class="loading_container">
-    <div class="load-container load4">
-        <div class="loader">Loading...</div>
-    </div>
-</div>
+<div class="list_container"></div>
 <script src="assets/js/jquery1.9.1.js"></script>
+<script src="assets/js/util.js"></script>
 <script src="assets/js/index.js"></script>
 
 </body>
