--- a/Contents/Resources/list.html
+++ b/Contents/Resources/list.html
@@ -11,7 +11,7 @@
 <body>
 <div class="header_container">
     <div class="search_container">
-        <input type="text" placeholder="搜索">
+        <input class="searchInput" type="text" placeholder="搜索">
         <span class=" iconfont icon-search icon_search_local"></span>
     </div>
     <div class="buttons_contaienr">
@@ -28,62 +28,20 @@
         </div>
     </div>
 </div>
-<div class="content_container">
-    <p class="item_has_selected">
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>12</span>
-    </p>
-    <p>
-        <span>e1.completeCopyUrlBtn.value</span>
-        <span>1</span>
-    </p>
+<div class="content_container"></div>
+<p class="bottom_container"></p>
+<div class="setting-container">
+    <div class="setting-panel">
+        <p>同时修改文字图层的显示内容为一下图层</p>
+        <select name="yuzhong" id="yuzhong">
+            <option value="" selected="selected">不修改</option>
+        </select>
+        <p class="changePro">切换项目</p>
+        <!--<p class="logout">退出登录</p>-->
+    </div>
 </div>
-<p class="bottom_container">共109条，未使用92条</p>
 <script src="assets/js/jquery1.9.1.js"></script>
+<script src="assets/js/util.js"></script>
 <script src="assets/js/list.js"></script>
 </body>
 </html>
